[gd_scene load_steps=4 format=3 uid="uid://b381b46hiv1xx"]

[ext_resource type="Script" path="res://Menu/pause_menu.gd" id="1_57l7j"]
[ext_resource type="Texture2D" uid="uid://dlfb8ftj11jr1" path="res://Menu/Menuscrn.png" id="1_y44gy"]
[ext_resource type="Theme" uid="uid://4cstuxihwmn" path="res://Menu/Theme/game_theme.tres" id="2_o82l7"]

[node name="PauseMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_57l7j")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_y44gy")

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.502
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -581.0
offset_right = 91.392
offset_bottom = -490.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 56
text = "PAUSE"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_o82l7")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Continue" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="Options" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Main Menu" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
